--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.0",
+    "axios": "^0.24.0",
+    "chart.js": "^3.6.2",
+    "html-react-parser": "^1.4.3",
+    "millify": "^4.0.0",
+    "moment": "^2.29.1",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-chartjs-2": "^4.0.0",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
