--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "@reduxjs/toolkit": "^1.7.0",
     "axios": "^0.24.0",
     "chart.js": "^3.6.2",
